--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>An empty page</title>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
 
 </body>
-<script src="script.js"></script>
 </html>
